# sdf-lwm2m-converter

./: .gitignore  CMakeLists.txt  README.md
lib/converter/: CMakeLists.txt
lib/converter/include/: converter.h  lwm2m.h  lwm2m_to_sdf.h  mapping.h  sdf.h  sdf_to_lwm2m.h
lib/converter/src/: converter.cpp  lwm2m.cpp  sdf.cpp
lib/validator/include/: validator.h
lib/validator/src/: validator.cpp
src/: main.cpp  main.h
